# sharework_task_planning

./: .gitignore  README.md
sharework_demo/: CMakeLists.txt  package.xml
sharework_demo/launch/: debug.launch  demo.launch
sharework_demo/script/: ThereIsNewPiece.py  check_agent_state_srv.py  check_new_piece_srv.py  debug.py  rename_mongodb_goal.py
sharework_demo/src/: demo.cpp  demo.cpp.autosave  demo_v2.cpp
sharework_demo_tree/: CMakeLists.txt  package.xml
sharework_demo_tree/include/sharework_demo_tree/: fixture_check.h
sharework_demo_tree/src/: demo.cpp  run_tree.cpp
sharework_demo_tree/src/sharework_demo_tree/: fixture_check.cpp
sharework_imu_hmi/: CMakeLists.txt  package.xml
sharework_imu_hmi/launch/: sharework_imu_hmi.launch
sharework_imu_hmi/src/: sharework_imu_hmi_node.cpp
sharework_listener/: CMakeLists.txt  package.xml
sharework_listener/src/: listener_node.cpp
sharework_mongo_collections/: hrc_task_properties
sharework_platinum_echo/: CMakeLists.txt  package.xml
sharework_platinum_echo/src/: sharework_platinum_echo_node.cpp
sharework_task_planning/: CMakeLists.txt  README.md  package.xml
sharework_task_planning/config/: mongo_configuration.yaml  multiple_agents.yaml  single_agents.yaml
sharework_task_planning/launch/: STRANE_task_dispatcher.launch  STRANE_task_planner_interface.launch  hrc_fake.launch  hrc_real.launch  human_real_executor.launch  mongo_handler.launch  robot_executor.launch  sequence_executor.launch  task_dispatcher.launch  task_planner_interface_fake.launch  task_planner_interface_real.launch  task_service_manager.launch  training.launch
sharework_task_planning/mongo/: collection_cembre_test
sharework_task_planning/plans/: example.yaml  example_cembre (copia).yaml  example_cembre.yaml  mosaic_sharework_sync_at_rows.yaml  recipe_cembre_lms.yaml  recipe_cembre_lms_test.yaml  recipe_strane.yaml  recipe_strane_no_interaction.yaml  recipe_strane_only_robot.yaml  test_recipe.yaml
sharework_task_planning/plans/multi-obj/mhs/: recipe_plan1.yaml  recipe_plan2.yaml  recipe_plan3.yaml  recipe_plan4.yaml  recipe_plan5.yaml
sharework_task_planning/plans/multi-obj/mindeltamhs/: recipe_plan1.yaml  recipe_plan2.yaml  recipe_plan3.yaml  recipe_plan4.yaml  recipe_plan5.yaml
sharework_task_planning/plans/multi-obj/minmaxmhs/: recipe_plan1.yaml  recipe_plan2.yaml  recipe_plan3.yaml  recipe_plan4.yaml  recipe_plan5.yaml
sharework_task_planning/plans/multi-obj/minmaxmhs_optimized_old/: plan1_optimized.yaml  plan2_optimized.yaml  plan3_optimized.yaml  plan4_optimized.yaml  plan5_optimized.yaml
sharework_task_planning/plans/multi-obj/v4/: recipe_plan1.yaml  recipe_plan2.yaml  recipe_plan3 (seconda copia).yaml  recipe_plan4 (copia 3).yaml  recipe_plan5 (seconda copia).yaml
sharework_task_planning/plans/multi-obj/v4_fake/: optimized_plan1 (copia).yaml  optimized_plan2 (copia).yaml  optimized_plan3 (copia).yaml  (+3 more)
sharework_task_planning/plans/test/: recipe_plan-manual-opt.yaml  recipe_plan-manual.yaml  recipe_plan-multi-obj-fake-matrix-mhs.yaml  recipe_plan-multi-obj-fake-matrix-mindeltamhs.yaml  recipe_plan-multi-obj-fake-matrix-minmaxmhs.yaml  recipe_plan-multi-obj-fake-matrix.yaml  recipe_plan-multi-obj.yaml  recipe_plan-single-obj.yaml
sharework_task_planning/plans/training/: recipe_0.yaml  recipe_1.yaml  recipe_10.yaml  recipe_11.yaml  recipe_12.yaml  recipe_13.yaml  recipe_14.yaml  recipe_15.yaml  recipe_16.yaml  recipe_17.yaml  recipe_18.yaml  recipe_19.yaml  recipe_2.yaml  recipe_20.yaml  recipe_21.yaml  recipe_22.yaml  recipe_23.yaml  recipe_24.yaml  recipe_25.yaml  recipe_26.yaml  recipe_27.yaml  recipe_28.yaml  recipe_29.yaml  recipe_3.yaml  recipe_30.yaml  recipe_31.yaml  recipe_32.yaml  recipe_33.yaml  recipe_34.yaml  recipe_35.yaml  recipe_36.yaml  recipe_37.yaml  recipe_38.yaml  recipe_39.yaml  recipe_4.yaml  recipe_40.yaml  recipe_41.yaml  recipe_42.yaml  recipe_43.yaml  recipe_44.yaml  (+50 more)
(+35 files in other folders)
